--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,17 @@
   color: red;
   margin: 20px 0px;
 }
+
 button{
   margin-top: 20px;
+}
+
+#result{
+	display: flex;
+	flex-flow: row wrap;
+}
+
+.card{
+	margin: 10px;
+	width: 18rem;
 }
