--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,13 @@
 button{
   margin-top: 20px;
 }
+
+
+#result {
+  display: flex;
+  flex-flow: row wrap;
+}
+.card{
+  margin: 10px;
+  width: 18rem;
+}
