--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,16 @@
-.container-fluid{
-  padding: 43px;
-}
+@import './vars.css';
 
+
+.container-fluid{
+  padding: 20px 40px;
+}
+h2 {
+  color: var(--indigo);
+}
+label {
+  color: var(--cyan);
+  font-weight: bold;
+}
 #error{
   color: red;
   margin: 20px 0px;
@@ -18,31 +27,32 @@ button{
 .card{
   margin: 10px;
   width: 18rem;
-  color: white;
+  color: var(--white);
 }
 
 .country-info {
-  color: #212529;
+  color: var(--main-black);
   width: 100%;
 }
 
 /* captcha */
 .captcha{
 	height: 30px;
-	width:160px;
+	width: 160px;
 	margin: 15px 0;
 }
 .captcha span{
 	float:right;
 	line-height: 30px;
-	font-size:13pt;
-	font-weight: bolder;
+	font-size: 13pt;
+	font-weight: 600;
+  color: var(--gray-dark);
 }
 .captcha .check{
 	border-radius: 3px;
 	width:30px;
 	height: 30px;
-	border: 2px solid green;
+	border: 2px solid var(--cyan);
 	display:inline;
 	position: absolute;
   cursor: pointer;
@@ -56,7 +66,7 @@ button{
 }
 
 .check .checkmark {
-  stroke: green;
+  stroke: var(--cyan);
   stroke-dashoffset: 745.74853515625;
   stroke-dasharray: 745.74853515625;
   -webkit-animation: dash 2s ease-out forwards;
@@ -89,7 +99,7 @@ button{
 
 @keyframes progress {
   0% {
-    width: calc(100vw - 99vw);
+    width: calc(10vw - 10px);
   }
 }
 
